# sca-kitchen-sink

./: README.md
javascript/: package.json  pnpm-lock.yaml
javascript/bun/: package.json
javascript/npm/: package-lock.json  package.json
javascript/pnpm/: package.json  pnpm-lock.yaml
javascript/yarn/: .pnp.cjs  package.json
php/composer/: composer.json
python/poetry/: pyproject.toml
python/requirements/: requirements.txt
python/uv/: pyproject.toml
ruby/rubygems/: Gemfile
rust/cargo/: Cargo.toml
