[package]
name = "vulnerable-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.5.4"
time = "0.1.40"
tempfile = "3.2.0"
base64 = "0.13.0"
url = "2.2.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.8.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
hyper = { version = "0.14.11", features = ["full"] }
rand = "0.8.4"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
uuid = { version = "0.8.2", features = ["v4"] }
sha2 = "0.9.5"
bytes = "1.0.1"
futures = "0.3.16"
async-trait = "0.1.51"
thiserror = "1.0.26"
anyhow = "1.0.42"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
clap = "3.0.0-beta.4"
toml_edit = "0.2.0"
ring = "0.16.20"
rustls = "0.19.1"
openssl = "0.10.36"
num = "0.4.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"
crossbeam = "0.8.1"
rayon = "1.5.1"
parking_lot = "0.11.1"
dashmap = "4.0.2"
indexmap = "1.7.0"
smallvec = "1.6.1"
arrayvec = "0.7.1"
bstr = "0.2.16"
memchr = "2.4.0"
aho-corasick = "0.7.18"
glob = "0.3.0"
walkdir = "2.3.2"
notify = "4.0.17"
csv = "1.1.6"
xml-rs = "0.8.4"
quick-xml = "0.22.0"
